# Priestly

./: .gitignore  Makefile  README.md  changelog.txt  config.cfg  config.py  pyproject.toml
DOCS/: README.md  architecture.md  covenant.md  product.md
cli/: chat_client.py  client.py  relay.py  server.py  ui_server.py
crypto/: __init__.py  covenant.py  hkdf.py  hmac_sha256.py  huffman.py  sha1.py
protocol/: __init__.py  covenant.py  models.py  packets.py  session.py
scripts/: gen_dev_cert.py
tests/: conftest.py  test_chat_integration.py  test_config.py  test_config_password.py  test_covenant_crypto.py  test_covenant_handshake.py  test_frame_codec.py  test_handshake.py  test_hkdf.py  test_hmac_sha256.py  test_huffman.py  test_integration.py  test_malformed_frames.py  test_no_tls.py  test_packet_fuzz.py  test_packets.py  test_relay.py  test_session.py  test_sha1.py  test_tls.py  test_ui_covenant.py  test_websocket.py
tests/js/: crosscheck.cjs
transport/: __init__.py  client.py  server.py  tls.py  ws.py
ui/: covenant.js  index.html
