[project]
name = "priestly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=8",
    "pytest-cov>=5",
    "puresvg>=0.1.1",
    "pip>=26.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
